--- a/brasil/brasil/Screens/RegisterVC/RegisterVC.storyboard
+++ b/brasil/brasil/Screens/RegisterVC/RegisterVC.storyboard
@@ -17,45 +17,62 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Create Your Account" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2MB-QU-O50">
-                                <rect key="frame" x="30" y="99" width="333" height="21"/>
+                                <rect key="frame" x="30" y="79" width="333" height="21"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="L06-KR-9Ue">
-                                <rect key="frame" x="30" y="160" width="333" height="34"/>
+                                <rect key="frame" x="30" y="140" width="333" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wdM-SG-Lpm">
-                                <rect key="frame" x="30" y="224" width="333" height="34"/>
+                                <rect key="frame" x="30" y="204" width="333" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mxk-um-df0">
-                                <rect key="frame" x="30" y="288" width="333" height="34"/>
+                                <rect key="frame" x="30" y="268" width="333" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ry3-q3-SpR">
-                                <rect key="frame" x="30" y="352" width="333" height="34"/>
+                                <rect key="frame" x="30" y="332" width="333" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dWw-fg-ouK">
-                                <rect key="frame" x="30" y="426" width="333" height="35"/>
+                                <rect key="frame" x="30" y="406" width="333" height="35"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="filled" title="Register"/>
                             </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logoGrinGO" translatesAutoresizingMaskIntoConstraints="NO" id="45y-w7-15y">
+                                <rect key="frame" x="90" y="481" width="213" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="59o-Qm-dE0"/>
+                                    <constraint firstAttribute="width" constant="213" id="xek-TY-ZNM"/>
+                                </constraints>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="gringoDupla" translatesAutoresizingMaskIntoConstraints="NO" id="CTY-7M-RIV">
+                                <rect key="frame" x="72.666666666666686" y="521" width="248" height="120"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="248" id="umV-mV-srE"/>
+                                    <constraint firstAttribute="height" constant="120" id="w1N-tc-9NM"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="2MB-QU-O50" secondAttribute="trailing" constant="30" id="03z-8E-kxs"/>
+                            <constraint firstItem="45y-w7-15y" firstAttribute="top" secondItem="dWw-fg-ouK" secondAttribute="bottom" constant="40" id="EW2-G8-lWC"/>
+                            <constraint firstItem="45y-w7-15y" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="Ism-Pf-1Uc"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="ry3-q3-SpR" secondAttribute="trailing" constant="30" id="Ock-2w-KpQ"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="L06-KR-9Ue" secondAttribute="trailing" constant="30" id="OrS-EP-8Do"/>
-                            <constraint firstItem="2MB-QU-O50" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="40" id="Q6h-Y9-UAJ"/>
+                            <constraint firstItem="2MB-QU-O50" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="20" id="Q6h-Y9-UAJ"/>
                             <constraint firstItem="mxk-um-df0" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="30" id="R6K-0U-QKW"/>
+                            <constraint firstItem="CTY-7M-RIV" firstAttribute="top" secondItem="45y-w7-15y" secondAttribute="bottom" constant="10" id="SQg-9D-zQ1"/>
                             <constraint firstItem="L06-KR-9Ue" firstAttribute="top" secondItem="2MB-QU-O50" secondAttribute="bottom" constant="40" id="Vfy-KL-Ppw"/>
                             <constraint firstItem="ry3-q3-SpR" firstAttribute="top" secondItem="mxk-um-df0" secondAttribute="bottom" constant="30" id="WAP-QX-HC1"/>
                             <constraint firstItem="2MB-QU-O50" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="30" id="Zmo-eV-Jxs"/>
@@ -65,6 +82,7 @@
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="mxk-um-df0" secondAttribute="trailing" constant="30" id="eCJ-pp-k7Z"/>
                             <constraint firstItem="wdM-SG-Lpm" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="30" id="fTy-G3-pAg"/>
                             <constraint firstItem="ry3-q3-SpR" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="30" id="g5A-2d-PW7"/>
+                            <constraint firstItem="CTY-7M-RIV" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="gM9-We-c9z"/>
                             <constraint firstItem="L06-KR-9Ue" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="30" id="lNP-CT-9eI"/>
                             <constraint firstItem="dWw-fg-ouK" firstAttribute="top" secondItem="ry3-q3-SpR" secondAttribute="bottom" constant="40" id="oQd-j8-cJG"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="dWw-fg-ouK" secondAttribute="trailing" constant="30" id="otp-tA-jRO"/>
@@ -86,6 +104,8 @@
         </scene>
     </scenes>
     <resources>
+        <image name="gringoDupla" width="1661" height="1298"/>
+        <image name="logoGrinGO" width="2108" height="613"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
