--- a/brasil/brasil/Screens/ForgotPasswordVC/ForgotPasswordVC.storyboard
+++ b/brasil/brasil/Screens/ForgotPasswordVC/ForgotPasswordVC.storyboard
@@ -17,32 +17,41 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Forgot your Password?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sfM-QK-qyu">
-                                <rect key="frame" x="30" y="99" width="333" height="21"/>
+                                <rect key="frame" x="30" y="79" width="333" height="21"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="V2w-HA-AkA">
-                                <rect key="frame" x="30" y="150" width="333" height="34"/>
+                                <rect key="frame" x="30" y="130" width="333" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eI2-w8-Hl0">
-                                <rect key="frame" x="30" y="214" width="333" height="35"/>
+                                <rect key="frame" x="30" y="204" width="333" height="35"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="filled" title="Recover"/>
                             </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="gringo3" translatesAutoresizingMaskIntoConstraints="NO" id="MHt-7X-00C">
+                                <rect key="frame" x="30" y="299" width="333" height="238"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="333" id="FYV-Lq-faT"/>
+                                    <constraint firstAttribute="height" constant="238" id="iKn-cb-3NA"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="eI2-w8-Hl0" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="30" id="DO8-vB-das"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="V2w-HA-AkA" secondAttribute="trailing" constant="30" id="FvA-bS-eL0"/>
-                            <constraint firstItem="sfM-QK-qyu" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="40" id="RHE-KX-waV"/>
+                            <constraint firstItem="sfM-QK-qyu" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="20" id="RHE-KX-waV"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="eI2-w8-Hl0" secondAttribute="trailing" constant="30" id="XYT-Jv-OFr"/>
                             <constraint firstItem="V2w-HA-AkA" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="30" id="aG9-MD-KX5"/>
-                            <constraint firstItem="eI2-w8-Hl0" firstAttribute="top" secondItem="V2w-HA-AkA" secondAttribute="bottom" constant="30" id="eDq-Pe-Swk"/>
+                            <constraint firstItem="MHt-7X-00C" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="d9P-6F-989"/>
+                            <constraint firstItem="eI2-w8-Hl0" firstAttribute="top" secondItem="V2w-HA-AkA" secondAttribute="bottom" constant="40" id="eDq-Pe-Swk"/>
                             <constraint firstItem="sfM-QK-qyu" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="30" id="k94-w2-KE5"/>
+                            <constraint firstItem="MHt-7X-00C" firstAttribute="top" secondItem="eI2-w8-Hl0" secondAttribute="bottom" constant="60" id="shp-tJ-yde"/>
                             <constraint firstItem="V2w-HA-AkA" firstAttribute="top" secondItem="sfM-QK-qyu" secondAttribute="bottom" constant="30" id="uN0-8f-qxT"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="sfM-QK-qyu" secondAttribute="trailing" constant="30" id="yn2-Ew-2t9"/>
                         </constraints>
@@ -55,10 +64,11 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="190" y="-33"/>
+            <point key="canvasLocation" x="188.54961832061068" y="-33.098591549295776"/>
         </scene>
     </scenes>
     <resources>
+        <image name="gringo3" width="893" height="1271"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
